# VORM

./: .gitignore  CMakeLists.txt  README.md
test/: CMakeLists.txt  ReflectionTest.cpp
vorm/: Datetime.h
